--- a/index.css
+++ b/index.css
@@ -223,7 +223,7 @@ font-size: 40px;
   width: 100px;
   height: 100px;
 }
-@media only screen and (min-width:320px) and (max-width:700px){
+@media only screen and (min-width:320px) and (max-width:420px){
   .main{
     position: relative;
     width:100%;
@@ -298,7 +298,7 @@ font-size: 20px;
   }
   .buttons .follow{
     width: 100%;
-    margin-top: 200px;
+    margin-top: 60px;
     text-align: center;
   }
   
@@ -466,9 +466,17 @@ margin-left: 100px;
 #working{
   margin-left: 30px;
 }
+.buttons{
+  margin-top: 300px;
+  width:100%;
+  
+}
+
 .buttons .follow p{
  text-align: center;
  margin-right: 50px;
+ 
+
 }
 }
 
