--- a/index.css
+++ b/index.css
@@ -388,6 +388,11 @@ margin-left: 100px;
 #working{
   font-size: 35px;
 }
+.buttons{
+  margin-top: 100px;
+}
+
+
 }
 @media only screen and (min-width:651px) and (max-width:1200px){
 .main{
